...
                  style={{
                    ...typography.ui.caption,
                    color: "rgba(255, 255, 255, 0.5)",
                    textDecorationLine: "underline",
                  }}
                >
                  {reason === "upgrade" ? "Terms of Use (EULA)" : "Terms"}
                </Text>
              </Pressable>
              <Text
                style={{
                  ...typography.ui.caption,
                  color: "rgba(255, 255, 255, 0.5)",
...
                  style={{
                    ...typography.ui.caption,
                    color: "rgba(255, 255, 255, 0.5)",
                    textDecorationLine: "underline",
                  }}
                >
                  {reason === "upgrade" ? "Privacy Policy" : "Privacy"}
                </Text>
              </Pressable>
            </View>
          </View>
        </ScrollView>
      </LinearGradient>
...
